--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,5 +155,10 @@
     <string name="correo_ejemplo_com">correo@ejemplo.com</string>
     <string name="ej_912345678">Ej: 912345678</string>
 
+    <!-- Strings Comentarios Clientes -->
+    <string name="titulo_comentarios_clientes">Comentarios</string>
+    <string name="nombrecliente">Nombre Cliente</string>
+    <string name="nuevocomentario">Nuevo comentario</string>
+    <string name="publicarcomentario">Publicar comentario</string>
 
 </resources>
