Visualizacion de comentarios como especialista
Se agrega la funcionalidad de que un especialista pueda visualizar los comentarios que le han hecho a sus servicios, además de arreglar los detalles en agregar comentario como cliente : -Al escribir debe empezar de arriba, no del centro
-No debe dejar publicar el comentario sin haber dejado ningún comentario y sin calificar
-Quitar el subrayado del botón "Nuevo comentario"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,7 @@
     <string name="nuevocomentario"><u>Nuevo comentario: </u></string>
     <string name="publicarcomentario">Publicar comentario</string>
     <string name="calificar"><u>Calificar: </u></string>
+    <string name="anadir_new_comment">Nuevo comentario: </string>
+
 
 </resources>
