Filtro para ver los servicios
Se aplica el filtro correspondiente por ciudades de la región del maule

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@
 
     <!-- Strings Lista de Ciudades -->
     <string-array name="simple_items">
+        <item>Seleccionar ciudad</item> <!-- Opción de deselección -->
         <item>Cauquenes</item>
         <item>Chanco</item>
         <item>Colbun</item>
