Implementacion de validacion rut, Mejoras de navegacion cliente y recuperacion de contraseña
se implemento el validador del rut para cliente y especialista, se mejoro la navegacion de los botones en la interfaz de cliente y se agrego la opcion de recuperar contraseña con el correo para el cliente y especialista

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,7 @@
     <string name="btn_eliminar_foto_cliente">Eliminar Foto</string>
     <string name="btn_eliminar_cliente">Eliminar Cliente</string>
     <string name="btn_bloquear_cliente">Bloquear Cliente</string>
+    <string name="olvido_su_contrase_a">¿Olvido su contraseña?</string>
 
     <!-- Strings Lista de Ciudades -->
     <string-array name="simple_items">
