Implementación de mantención de inicio de sesión
se implemento la funcionalidad de mantener la sesión iniciada aunque se cierre la app y corrección de errores.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Nombre de la aplicación -->
-    <string name="nombre_app" />
+    <string name="nombre_app">Fixit</string>
 
     <!-- Strings Portada -->
     <string name="titulo_portada">Fixit</string>
